[Update] Set external variable configuration   - Modify Autowired on Constructors instead of Properties   - Create ConfigurationService to inject data from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+admin.password=password
+admin.name=admin
+flickr.apiKey=9a4794f8dcebfc24e6050c909fbb6ba0
+flickr.sharedSecret=778afac6bc65bcf1
+flickr.userId=161473432@N05
+flickr.maxPerPage=500
